--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>📱 Mood's Apk</title>
+<title>📱 MR » Mods </title>
 <style>
   * {box-sizing:border-box;margin:0;padding:0;}
   body {font-family:'Segoe UI',sans-serif;background:#121212;color:#eee;display:flex;flex-direction:column;min-height:100vh;overflow-x:hidden;transition: background 0.5s;}
@@ -88,7 +88,7 @@
 <body>
 
 <header>
-  <a href="index.html" class="logoTitle"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi4Fskmkekk0iffsSTy4FOp__84K6sbW8QVPlwXJcgcXQnJ3tPnlAaP9yGRuguIx6YU2O-qV-gs7QXQeqnKzoeA9aQzDAc99baMKlUwNhveRBWVSN2-I5lXubUHr8MarBkpcXe7fGF78ycY06l8fyvDbKwYPJGXxmfSlkT6hD_g_o2InWWNDzSq9HPPccFN/s16000/logo.png">Mood's Apk</a>
+  <a href="index.html" class="logoTitle"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjlv9NqWC5ii0tX6BxjMADfR8vnPj3o8R9CiZRy083PPtfRoVI9hQXEEq58Ah96SVC7dQRYnbVFpuTmLwjISMH9Qthrk2WQKgRcQBopzApK3trtW3sGGZbK3zRRLGo8o5EbDD2vmEFB5qgI0KbEwgEftbylFJYYHEwLz62sRqh1rrBQnpuqFb6gEtSEGqUj/s16000/IMG_20250916_195755.jpg">MR » Mods </a>
   <div class="searchBox">
     <input type="text" id="searchInput" placeholder="Search apps...">
     <div id="suggestions" class="suggestions"></div>
