--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <div id="appList"></div>
 
 <footer>
-  © 2025 Mood's APK Store
+  © 2025 MR » Mods 
   <small>❤️ by Robiul Islam Rakib</small>
 </footer>
 
