--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 <div class="marquee">
   <div class="marquee-inner">
-    <span>👋 Welcome to Mood's APK – Download all premium apps free! ☎️Contact for any promotion Whatsapp: 01776781995</span>
-    <span>👋 Welcome to Mood's APK – Download all premium apps free! ☎️Contact for any promotion Whatsapp: 01776781995</span>
+    <span>👋 Welcome to MR » Mods – Download all premium apps free! ☎️Contact for any promotion Whatsapp: 01776781995</span>
+    <span>👋 Welcome to MR » Mods – Download all premium apps free! ☎️Contact for any promotion Whatsapp: 01776781995</span>
   </div>
 </div>
 <div class="slider">
