--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 <footer>
     <a href="index.html" class="footer-icon"><i class="fa fa-home"></i></a>
-    <a href="https://rakibbapry1000200.github.io/Promte-App/index.html" class="footer-icon"><i class="fa-solid fa-wand-magic-sparkles"></i></a>
+    <a href="https://rakibbapry1000200.github.io/Prompt/index.html" class="footer-icon"><i class="fa-solid fa-wand-magic-sparkles"></i></a>
 </footer>
 
 <script type="module">
