--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
   }
 
 </style>
+  <script type='text/javascript' src='//pl27826264.effectivegatecpm.com/1a/91/83/1a918398f2501ec4856526bbb3e38627.js'></script>
 </head>
 <body>
 
@@ -405,6 +406,6 @@ window.addEventListener('scroll', () => {
 });
 
 </script>
-
+<script type='text/javascript' src='//pl27839228.effectivegatecpm.com/76/73/9b/76739b36ed6d9c5c41b26e1c1304bcf8.js'></script>
 </body>
  </html>
